--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -11,8 +11,7 @@
   = @item.date
 %p
   %b Type:
-  = @item.type
+  = @item.type_id
 
-= link_to 'Edit', edit_item_path(@item)
 \|
 = link_to 'Back', items_path
