--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -6,20 +6,14 @@
     %th Full text
     %th Date
     %th Type
-    %th
-    %th
-    %th
+
 
   - @items.each do |item|
     %tr
       %td= item.title
       %td= item.full_text
       %td= item.date
-      %td= item.type
-      %td= link_to 'Show', item
-      %td= link_to 'Edit', edit_item_path(item)
-      %td= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= item.type_id
 
 %br
 
-= link_to 'New Item', new_item_path
