--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -26,3 +26,8 @@
 //
 // Example:
 // @linkColor: #ff0000;
+//[class*="span"] {
+//  float: left;
+//  min-height: 1px;
+//  margin-left: 10px;
+//}
