--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -3,15 +3,27 @@
 %p
   %b Name:
   = @place.name
-%p
-  %b Category:
-  = @place.category_id
+
 %p
   %b Desc:
   = @place.desc
 %p
   %b Contact:
-  = @place.contact_id
+  = @place.contact.address
+  \Телефон:
+  = @place.contact.tel
+
+-@events.each do |event|
+  #events
+    %h2=event.items.first.title
+    .row
+      .span7
+        .small= localize(event.date_begin, :format => "%R %A %d-%B-%Y")
+        .img_float= image_tag event.items.first.main_image.url('thumb')
+        .desc=HTML_Truncator.truncate(event.items.first.full_text ,10 ).html_safe
+        .info= sanitize event.items.first.info
+
+#paginator= paginate @events
 
 \|
 = link_to 'Back', places_path
