--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,10 +27,8 @@
             %span.icon-bar
           %a.brand(href="#") Afisha
           .container.nav-collapse
-            %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+            .nav
+              =render_navigation
 
     .container
 
