--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -2,7 +2,7 @@
 
 %h1=@item.title
 -@item.categories.each do |cat|
-  .path=link_to cat.name
+  .path=link_to cat.name , category_path(cat)
 
 .img_float= image_tag @item.images.first.image.url('medium')
 
