--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,16 +1,3 @@
-
-#paginator= paginate @items
-.row
-  - i=0
-  -@items.each do  |item| i+=1
-    .span3
-      .well
-        %h4=link_to item.title , item_path(item) , :title=>item.title
-        -item.categories.each do |cat|
-          =link_to cat.name
-        =image_tag item.galleries.first.images.first.image.url('medium') unless item.galleries.empty?
-        -#.small
-        = HTML_Truncator.truncate( item.full_text ,10 ).html_safe
-    - if   i.multiple_of?(3)
-      .clearfix()
-#paginator= paginate @items
+.paginator= paginate @items
+=render "shared/items"
+.paginator= paginate @items
