--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
           %a.brand(href="#") Afisha
           .container.nav-collapse
             .nav
-              =render_navigation
+              =render_navigation :expand_all => true, :renderer => :bootstrap
 
     .container
 
@@ -40,11 +40,9 @@
           .span3
             .well.sidebar-nav
               %h3 Sidebar
-              %ul.nav.nav-list
-                %li.nav-header Sidebar
-                %li= link_to "Link 1", "/path1"
-                %li= link_to "Link 2", "/path2"
-                %li= link_to "Link 3", "/path3"
+              =render_navigation :expand_all => true, :renderer => :bootstrap ,:context=>'cat'
+
+
     
       %footer
         %p &copy; Company 2012
