--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -13,17 +13,22 @@
   \Телефон:
   = @place.contact.tel
 
--@events.each do |event|
+-@place.schedule.each do |item ,dates|
   #events
-    %h4=event.items.first.title
+    %h4=link_to item.title , item_path(item)
     .row
       .span7
-        .small= localize(event.date_begin, :format => "%R %A %d-%B-%Y")
-        .img_float= image_tag event.items.first.main_image.url('thumb')
-        .desc=HTML_Truncator.truncate(event.items.first.full_text ,10 ).html_safe
-        .info= sanitize event.items.first.info
+        .img_float= image_tag item.main_image.url('thumb')
+        -#.desc=HTML_Truncator.truncate(item.full_text ,10 ).html_safe
+        -#.info= sanitize item.info
+        -dates.each do |date, rooms|
+          .small= localize(date, :format => "%d-%B-%Y")
+          -rooms.each do |room, times|
+            =room
+            -times.each do |time|
+              =time
 
-#paginator= paginate @events
+
 
 \|
 = link_to 'Back', places_path
