--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,8 +9,10 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
- *= require tree
+ *=require plugins/fancybox/jquery.fancybox.css
+ *=require_tree .
+ *=require tree
+
 
 
  */
