--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,14 +1,22 @@
 %p#notice= notice
 
+
 %h1=@item.title
 -@item.categories.each do |cat|
   =link_to cat.name , category_path(cat)
-
-.img_float= image_tag @item.images.first.image.url('medium')
-
+.img_float
+  =link_to @item.main_image.url('large')+'.jpg', class:'fancybox-thumb' ,rel:"fancybox-thumb" do
+    = image_tag @item.main_image.url('medium')+'.jpg'
+%p
+  =@item.info.html_safe
 %p
   = @item.full_text.html_safe
-
+.gallery
+  -@item.galleries.first.images.each_with_index do |image, index|
+    -if index > 1
+      .img
+        =link_to image.image.url('large')+'.jpg', class:'fancybox-thumb' ,rel:"fancybox-thumb" do
+          =image_tag(image.image.url('thumb')+'.jpg')
 
 
 \|
