--- a/app/views/my_tests/index.html.haml
+++ b/app/views/my_tests/index.html.haml
@@ -1,9 +1,24 @@
+-require 'coffee-filter'
+:plain
+  <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/knockout/2.1.0/knockout-min.js'></script>
+
 
 %h1 Listing my_tests
 
-=@result
-</br>
-=@result2
+#div(data-bind = "text: textvar")
+  Тестовый текст
+#div(data-bind = "click: fire")
+  fire
+:coffeescript
+  MyFirstModel = ()->
+    @textvar = ko.observable("tuytyu")
+    @fire = ()-> alert(@textvar())
+    return
+  ko.applyBindings(new MyFirstModel());
+
+-#=@result
+-#</br>
+-#=@result2
 -#:ruby
 -#  require 'benchmark'
 -#   item=Item.find(313)
